@@ -48,6 +48,8 @@ Producers
     + Fixed bug when INFO was used on a not yet playing framerate producer.
   o HTML producer:
     + Fixed bug where only URL:s with . in them where recognized.
+  o Image producer:
+    + Added LENGTH parameter to allow for queueing with LOADBG AUTO.
 
 Mixer
 -----
